# hello-triangle

./: CMakeLists.txt  README.md  main.cpp
lib/: object.cpp  object.h  shader.cpp  shader.h
shaders/: fragment.frag  vertex.vert
